# Realtime-Graphics-Labs

./: .gitignore  README.md
Cory_ArnettOBrien_20158721/: ATTRIBUTION.md  Tree.mtl  groundPlane.mtl  nat-rock-scaled.mtl  realtimeScene.blend  realtimeScene.blend1
Cory_ArnettOBrien_20158721/Performance Captures/: GPUPerformanceStillSceneNoVsync.xlsx  WierdFPSBehavour.csv  no_tree_novSync.xlsx  no_vSyncTree.xlsx  record1.csv  record2.xlsx
Cory_ArnettOBrien_20158721/code/: .gitignore  CMakeLists.txt  Main.cpp
Cory_ArnettOBrien_20158721/code/RGLib/: CMakeLists.txt  Camera.cpp  Camera.h  Constants.hpp  Entity.cpp  Entity.hpp  Exception.cpp  Exception.hpp  FlyViewer.cpp  FlyViewer.hpp  FrameBuffer.cpp  FrameBuffer.h  GLBuffer.cpp  GLBuffer.hpp  InstanceRenderer.cpp  InstanceRenderer.hpp  Light.hpp  Matrices.cpp  Matrices.hpp  Mesh.cpp  Mesh.hpp  ModelRenderer.cpp  ModelRenderer.h  Physics.cpp  Physics.hpp  Renderable.cpp  Renderable.hpp  RotateViewer.cpp  RotateViewer.hpp  Shader.h  ShaderProgram.cpp  ShaderProgram.hpp  ShaderUtils.cpp  ShaderUtils.h  ShadowMap.cpp  ShadowMap.hpp  Texture.cpp  Texture.h  Texture.hpp  TextureLegacy.cpp  (+8 more)
Cory_ArnettOBrien_20158721/code/config/: config.json
Cory_ArnettOBrien_20158721/code/shaders/: BillboardParticle.frag  BillboardParticle.geom  BlinnPhong.frag  BlinnPhong.vert  DepthTest.frag  DepthTest.vert  FragmentLighting.frag  HDRShader.frag  HDRShader.vert  NormalShader.frag  NormalShader.vert  RainParticle.comp  ShadowCubeMap.frag  ShadowMapped.frag  (+6 more)
Week1/LinearAlgebra/: ex_00_transformations.cpp  ex_01_transforming_normals.cpp
(+8 files in other folders)
