add_library(RGLib 
modelLoader.cpp
modelLoader.hpp
shader.h
shader.cpp
ShaderProgram.cpp
ShaderProgram.hpp
Camera.h
Camera.cpp
ModelRenderer.cpp
ModelRenderer.h
Texture.cpp
Texture.hpp
TextureLegacy.cpp
TextureLegacy.h
Mesh.hpp
Mesh.cpp
Renderable.cpp
Renderable.hpp
Entity.cpp
Entity.hpp
Exception.cpp
Exception.hpp
GLBuffer.cpp
GLBuffer.hpp
Constants.hpp
Viewer.hpp
Viewer.cpp
RotateViewer.hpp
RotateViewer.cpp
Matrices.hpp
Matrices.cpp
World.hpp
World.cpp
FlyViewer.hpp
FlyViewer.cpp
json.hpp)

target_compile_features(RGLib PRIVATE cxx_std_20)
